eb-4774: issue #5, fixed price and availability layout issues

--- a/src/WebChannel/main/webapp/xpedx/css/theme/MIL.css
+++ b/src/WebChannel/main/webapp/xpedx/css/theme/MIL.css
@@ -6300,7 +6300,7 @@ BEGIN 2014 styles
 }
 
 .two-col .mil-pa-price {
-	width: 312px;
+	width: 310px;
 	margin-right: 10px;
 	float: right;
 	clear: none;
